add: 支持完结和开篇opneapi
